# PrefabMerge

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
docs/design/: 2026-05-22-prefab-merge-design.md  __id__-rules-analysis.md
docs/plan/: 2026-05-22-implementation-plan.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: git.rs  mod.rs  prefab.rs
src/components/: BottomStatusBar.tsx  DiffPanel.tsx  FileSelector.tsx  MergeHistoryPanel.tsx  MergeSummaryModal.tsx  NodeTree.tsx  PropertyDiff.tsx  Toolbar.tsx
src/git/: api.ts
src/prefab/: diff.ts  id-rules.ts  index.ts  merger.ts  parser.ts  test-engine-advanced.ts  test-engine.ts  test-performance.ts  types.ts
src/store/: prefabStore.ts
