[package]
name = "prefab-merge"
version = "0.1.0"
description = "Cocos Creator Prefab Merge Tool"
authors = ["PrefabMerge Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-shell = "2.3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
